# docs/openapi.yaml
@@ -131,6 +131,46 @@ paths:
         '404':
           description: User not found.
 
+  
+    put:
+      summary: Update an existing user
+      description: Updates a user's details by UserID.
+      tags:
+        - Users
+      parameters:
+        - in: path
+          name: UserID
+          required: true
+          description: The ID of the user to update.
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                FirstName:
+                  type: string
+                  example: "John"
+                LastName:
+                  type: string
+                  example: "Doe"
+                Email:
+                  type: string
+                  example: "john.doe@example.com"
+      responses:
+        '200':
+          description: User updated successfully.
+        '404':
+          description: User not found.
+        '400':
+          description: Required fields missing in the request body.
+
+
+
+
   /Reviews/{RecipeID}:
     get:
       summary: Retrieve reviews for a specific recipe
@@ -183,3 +223,45 @@ paths:
                   message:
                     type: string
                     example: "No reviews found"
+
+
+  /ingredients/{recipe_id}:
+    get:
+      summary: Retrieve ingredients and amounts for a specific recipe
+      description: Fetches all ingredients and their amounts for a given recipe ID.
+      tags:
+        - Ingredients
+      parameters:
+        - in: path
+          name: recipe_id
+          required: true
+          description: The ID of the recipe to retrieve ingredients for.
+          schema:
+            type: integer
+            example: 101
+      responses:
+        '200':
+          description: A list of ingredients with their respective amounts for the specified recipe.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    Ingredient:
+                      type: string
+                      example: "Salt"
+                    IngredientsId:
+                      type: integer
+                      example: 101007
+          '404':
+          description: No ingredients found for the specified RecipeID.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "No ingredients found for this recipe"
